--- a/example/design-editor.html
+++ b/example/design-editor.html
@@ -6,17 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>编辑模式--电子病历设计器</title>
-    <script type="text/javascript" src="../sde.config.js"></script>
-    <link rel="stylesheet" href="../ueditor/themes/default/css/ueditor.css" />
-    <script type="text/javascript" src="../ueditor/ueditor.all.js?d=958"></script>
-    <script type="text/javascript" src="../ueditor/lang/zh-cn/zh-cn.js"></script>
-
-    <script type="text/javascript" id="design" src="../dist/js/sde.design.js"></script>
+    <title>编辑模式--电子病历编辑器</title>
+    <script type="text/javascript" id="design" src="../dist/js/sde.editor.js"></script>
 </head>
 
 <body>
-    <script id="myEditor" type="text/plain" style="width:680px;height:1000px;">
+    <div id="myEditor" style="width:680px;height:1000px;margin:0 auto;">
         <p style="text-align:center"><img src="http://www.tlzzu.com/EMR/img/1.png" title="" alt="1.png" /></p>
         <h1 style="text-align: center;">入 &nbsp;院 &nbsp;记 &nbsp;录</h1>
         <p style="text-align: center;font-size:13px;">科室：<span id="depCode" title="骨伤科" sde-model="{&quot;ID&quot;:&quot;depCode&quot;,&quot;TYPE&quot;:&quot;text&quot;,&quot;NAME&quot;:&quot;骨伤科&quot;,&quot;TAG&quot;:&quot;&quot;,&quot;DESCNAME&quot;:&quot;骨伤科&quot;,&quot;VERIFYTYPE&quot;:&quot;text&quot;,&quot;VALUE&quot;:&quot;骨伤科&quot;,&quot;REQUIRED&quot;:0,&quot;READONLY&quot;:1,&quot;COLOR&quot;:&quot;000000&quot;}"
@@ -151,24 +146,8 @@
         </p>
         <p>实在是不想写了，，，，，，，，，，，，，，，，，，，，，<br/></p>
         <p><br/></p>
-    </script>
-    <script>
-        var templates = [{
-            "ID": "xbState",
-            "NAME": "小便状态",
-            "TYPE": "select",
-            "TAG": "",
-            "DESCNAME": "小便状态",
-            "HTML": "<span id=\"xbState\" title=\"小便状态\"  sde-model=\"{&quot;ID&quot;:&quot;xbState&quot;,&quot;TYPE&quot;:&quot;select&quot;,&quot;NAME&quot;:&quot;小便状态&quot;,&quot;TAG&quot;:&quot;&quot;,&quot;DESCNAME&quot;:&quot;小便状态&quot;,&quot;REQUIRED&quot;:0,&quot;FREEINPUT&quot;:0,&quot;COLOR&quot;:&quot;000000&quot;,&quot;VALUE&quot;:&quot;&quot;,&quot;TEXT&quot;:&quot;&quot;,&quot;REMOTEURL&quot;:&quot;&quot;,&quot;BINDINGDATA&quot;:[{&quot;VALUE&quot;:&quot;小便正常&quot;,&quot;TEXT&quot;:&quot;小便正常&quot;,&quot;SELECTED&quot;:0},{&quot;VALUE&quot;:&quot;尿少&quot;,&quot;TEXT&quot;:&quot;尿少&quot;,&quot;SELECTED&quot;:0},{&quot;VALUE&quot;:&quot;无尿&quot;,&quot;TEXT&quot;:&quot;无尿&quot;,&quot;SELECTED&quot;:0},{&quot;VALUE&quot;:&quot;夜尿繁多&quot;,&quot;TEXT&quot;:&quot;夜尿繁多&quot;,&quot;SELECTED&quot;:0}]}\" contenteditable=\"false\" class=\"sde-bg\"><span class=\"sde-left\" style=\"color:#0000FF\" contenteditable=\"false\">[</span><span title=\"小便状态\" style=\"color:#000000;\" class=\"sde-value\" onclick=\"EMR.select.tlspanclick(this);\" ondblclick=\"EMR.select.tlspandblclick(this);\" contenteditable=\"false\">小便状态</span><span style=\"color:#0000FF\" contenteditable=\"false\" class=\"sde-right\">]</span></span>"
-        }, {
-            "ID": "tzState",
-            "NAME": "体重状况",
-            "TYPE": "select",
-            "TAG": "",
-            "DESCNAME": "体重状况",
-            "HTML": "<span id=\"tzState\" title=\"体重状况\"  sde-model=\"{&quot;ID&quot;:&quot;tzState&quot;,&quot;TYPE&quot;:&quot;select&quot;,&quot;NAME&quot;:&quot;体重状况&quot;,&quot;TAG&quot;:&quot;&quot;,&quot;DESCNAME&quot;:&quot;体重状况&quot;,&quot;REQUIRED&quot;:0,&quot;FREEINPUT&quot;:0,&quot;COLOR&quot;:&quot;000000&quot;,&quot;VALUE&quot;:&quot;&quot;,&quot;TEXT&quot;:&quot;&quot;,&quot;REMOTEURL&quot;:&quot;&quot;,&quot;BINDINGDATA&quot;:[{&quot;VALUE&quot;:&quot;体重无变化&quot;,&quot;TEXT&quot;:&quot;体重无变化&quot;,&quot;SELECTED&quot;:0},{&quot;VALUE&quot;:&quot;体重减轻&quot;,&quot;TEXT&quot;:&quot;体重减轻&quot;,&quot;SELECTED&quot;:0},{&quot;VALUE&quot;:&quot;体重增加&quot;,&quot;TEXT&quot;:&quot;体重增加&quot;,&quot;SELECTED&quot;:0}]}\" contenteditable=\"false\" class=\"sde-bg\"><span class=\"sde-left\" style=\"color:#0000FF\" contenteditable=\"false\">[</span><span title=\"体重状况\" style=\"color:#000000;\" class=\"sde-value\" onclick=\"EMR.select.tlspanclick(this);\" ondblclick=\"EMR.select.tlspandblclick(this);\" contenteditable=\"false\">体重状况</span><span style=\"color:#0000FF\" contenteditable=\"false\" class=\"sde-right\">]</span></span>"
-        }];
-    </script>
+    </div>
+
     <script type="text/javascript">
         window.onload = function() {
             var sde = new SDE({
@@ -179,9 +158,7 @@
                     '</div>' +
                     '<h1 style="font-size: 14px;height: 45px;line-height: 45px;margin: 0 auto;text-align: center;font-weight: normal;color:#fff;" >SoDiaoEditor电子病历编辑器</h1>' +
                     '</div>', //自定义title
-                mode: 'EDITOR',
-                footer: 'adsf',
-                control_templates: templates
+                mode: 'DESIGN'
             });
         };
     </script>
