--- a/example/index.html
+++ b/example/index.html
@@ -16,7 +16,7 @@
     <ul>
         <li>
             <a href="design-design.html">设计模式--电子病历设计器(扩展toolbar)</a>
-            <div>建议给病历模板设计者（开发人员，或者科主任）使用，可用来设计电子病历模板。也可以当做电子病历编辑器使用，此时输入的值可利用SDE对象暴露出的接口获取。</div>
+            <div>建议给病历模板设计者（开发人员，或者科主任）使用，可用来设计电子病历模板。也可以当做电子病历编辑器使用，此时输入的值可利用SDE对象暴露出的接口获取。<b style="color:red">增加自定义toolbar标题功能，可支持多语言</b></div>
         </li>
         <li><a href="editor-design.html">编辑模式--电子病历设计器</a>
             <div>建议给医生使用，此时医生可以在原有模板中添加已有的控件，也可以给科主任用来设计模板。亦可通过SDE对象暴露出来的接口获取数据。</div>
@@ -28,6 +28,11 @@
         <li>
             <a href="btn-design.html">按钮控制--电子病历设计器</a>
             <div>按钮通过事件控制！</div>
+        </li>
+
+        <li>
+            <a href="design-editor.html">设计模式--电子病历编辑器</a>
+            <div>建议给医生使用，此模式下医生可以编辑控件中的值，并且可编译控件的内容。<b style="color:red;">选中文字后有惊喜</b>。</div>
         </li>
         <li>
             <a href="editor-editor.html">编辑模式--电子病历编辑器</a>
