--- a/example/design-design.html
+++ b/example/design-design.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="../ueditor/ueditor.all.js?d=958"></script>
     <script type="text/javascript" src="../ueditor/lang/zh-cn/zh-cn.js"></script>
     <!-- 增加自定义toolbar title -->
-    <script type="text/javascript" src="../lang/sde-zh-cn.js"></script>
+    <script type="text/javascript" src="../lang/sde-zh-cn.js?_=99"></script>
     <script type="text/javascript" id="design" src="../dist/js/sde.design.js?_=99"></script>
 </head>
 
