增加日期、复选框功能

--- a/dialogs/select.html
+++ b/dialogs/select.html
@@ -274,6 +274,7 @@
                     $G('txtID').value = json.ID;
                     $G('txtNAME').value = json.NAME;
                     $G('txtCOLOR').value = json.COLOR;
+                    $G('txtCOLOR').style.backgroundColor = "#" + json.COLOR;
                     $G('txtTAG').value = json.TAG;
                     $G('txtDESCNAME').value = json.DESCNAME;
                     $G('txtDEFAULTVALUE').setAttribute('sde-value', json.VALUE);
