解决单行最后一个或者第一个为控件时光标无法输入的问题

--- a/dialogs/date.html
+++ b/dialogs/date.html
@@ -235,7 +235,7 @@
                         oNode.setAttribute('class', 'sde-bg');
                         oNode.innerHTML = html; //todo:具体需要实现
 
-                        editor.execCommand('insertHtml', oNode.outerHTML);
+                        editor.execCommand('insertHtml', "<span> </span>" + oNode.outerHTML + "<span> </span>");
                     } catch (e) {
                         try {
                             editor.execCommand('error');
