对toolbar增加再次点击折叠toolbar功能

--- a/dialogs/select.html
+++ b/dialogs/select.html
@@ -96,7 +96,8 @@
                 <td colspan="2">
                     <div class="tabbable">
                         <ul class="nav nav-tabs">
-                            <li class="active"><a href="#tab1" onclick="$G('txtREMOTEURL').value = '';" data-toggle="tab">固定选项</a></li>
+                            <!-- <li class="active"><a href="#tab1" onclick="$G('txtREMOTEURL').value = '';" data-toggle="tab">固定选项</a></li> -->
+                            <li class="active"><a href="#tab1" data-toggle="tab">固定选项</a></li>
                             <li><a href="#tab2" data-toggle="tab">动态数据</a></li>
                         </ul>
                         <div class="tab-content">
