--- a/example/editor-editor.html
+++ b/example/editor-editor.html
@@ -8,7 +8,7 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>编辑模式--电子病历编辑器</title>
     <script type="text/javascript" src="../ueditor/ueditor.parse.min.js"></script>
-    <script type="text/javascript" id="design" src="../dist/js/sde.editor.js"></script>
+    <script type="text/javascript" id="design" src="../dist/js/sde.editor.js?dd=9"></script>
     <style>
         @media (min-width: 1200px) {
             #myEditor {
@@ -159,7 +159,7 @@
                 contenteditable="false" class="sde-bg"><span class="sde-left" style="color:#0000FF" contenteditable="false">[</span><span title="营养" style="color:#000000;" class="sde-value" contenteditable="false">良好</span><span style="color:#0000FF" contenteditable="false"
                 class="sde-right">]</span></span>
         </p>
-        <table class="sde-table">
+        <table>
             <tbody>
                 <tr class="firstRow">
                     <td width="69" valign="middle" style="word-break: break-all;" align="center"><strong>项目</strong></td>
@@ -280,14 +280,13 @@
                             <span class="flatpickr-day " aria-label="五月 22, 2017" tabindex="-1">22</span><span class="flatpickr-day " aria-label="五月 23, 2017" tabindex="-1">23</span><span class="flatpickr-day " aria-label="五月 24, 2017" tabindex="-1">24</span>
                             <span class="flatpickr-day " aria-label="五月 25, 2017" tabindex="-1">25</span><span class="flatpickr-day " aria-label="五月 26, 2017" tabindex="-1">26</span><span class="flatpickr-day " aria-label="五月 27, 2017" tabindex="-1">27</span>
                             <span class="flatpickr-day " aria-label="五月 28, 2017" tabindex="-1">28</span><span class="flatpickr-day " aria-label="五月 29, 2017" tabindex="-1">29</span><span class="flatpickr-day " aria-label="五月 30, 2017" tabindex="-1">30</span>
-                            <span
-                                class="flatpickr-day " aria-label="五月 31, 2017" tabindex="-1">31</span>
-                                <span class="flatpickr-day nextMonthDay" aria-label="六月 1, 2017" tabindex="-1">1</span><span class="flatpickr-day nextMonthDay" aria-label="六月 2, 2017" tabindex="-1">2</span><span class="flatpickr-day nextMonthDay" aria-label="六月 3, 2017"
-                                    tabindex="-1">3</span>
-                                <span class="flatpickr-day nextMonthDay" aria-label="六月 4, 2017" tabindex="-1">4</span><span class="flatpickr-day nextMonthDay" aria-label="六月 5, 2017" tabindex="-1">5</span><span class="flatpickr-day nextMonthDay" aria-label="六月 6, 2017"
-                                    tabindex="-1">6</span><span class="flatpickr-day nextMonthDay" aria-label="六月 7, 2017" tabindex="-1">7</span><span class="flatpickr-day nextMonthDay" aria-label="六月 8, 2017" tabindex="-1">8</span>
-                                <span class="flatpickr-day nextMonthDay" aria-label="六月 9, 2017" tabindex="-1">9</span>
-                                <span class="flatpickr-day nextMonthDay" aria-label="六月 10, 2017" tabindex="-1">10</span>
+                            <span class="flatpickr-day " aria-label="五月 31, 2017" tabindex="-1">31</span>
+                            <span class="flatpickr-day nextMonthDay" aria-label="六月 1, 2017" tabindex="-1">1</span><span class="flatpickr-day nextMonthDay" aria-label="六月 2, 2017" tabindex="-1">2</span><span class="flatpickr-day nextMonthDay" aria-label="六月 3, 2017"
+                                tabindex="-1">3</span>
+                            <span class="flatpickr-day nextMonthDay" aria-label="六月 4, 2017" tabindex="-1">4</span><span class="flatpickr-day nextMonthDay" aria-label="六月 5, 2017" tabindex="-1">5</span><span class="flatpickr-day nextMonthDay" aria-label="六月 6, 2017"
+                                tabindex="-1">6</span><span class="flatpickr-day nextMonthDay" aria-label="六月 7, 2017" tabindex="-1">7</span><span class="flatpickr-day nextMonthDay" aria-label="六月 8, 2017" tabindex="-1">8</span>
+                            <span class="flatpickr-day nextMonthDay" aria-label="六月 9, 2017" tabindex="-1">9</span>
+                            <span class="flatpickr-day nextMonthDay" aria-label="六月 10, 2017" tabindex="-1">10</span>
                         </div>
                     </div>
                 </div>
