--- a/example/readonly-editor.html
+++ b/example/readonly-editor.html
@@ -158,7 +158,7 @@
                 contenteditable="false" class="sde-bg"><span class="sde-left" style="color:#0000FF" contenteditable="false">[</span><span title="营养" style="color:#000000;" class="sde-value" contenteditable="false">良好</span><span style="color:#0000FF" contenteditable="false"
                 class="sde-right">]</span></span>
         </p>
-        <table class="sde-table">
+        <table>
             <tbody>
                 <tr class="firstRow">
                     <td width="69" valign="middle" style="word-break: break-all;" align="center"><strong>项目</strong></td>
