--- a/demo/sodiaoeditor.v3.html
+++ b/demo/sodiaoeditor.v3.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>按钮控制--电子病历设计器</title>
-    <script type="text/javascript" src="../sde.config.js"></script>
-    <link rel="stylesheet" href="../ueditor/themes/default/css/ueditor.css" />
-    <script type="text/javascript" src="../ueditor/ueditor.all.js?d=958"></script>
-    <script type="text/javascript" src="../ueditor/lang/zh-cn/zh-cn.js?t=9"></script>
+    <script type="text/javascript" src="../sde.config.js?_=v3.0"></script>
+    <link rel="stylesheet" href="../ueditor/themes/default/css/ueditor.css?_=v3.0" />
+    <script type="text/javascript" src="../ueditor/ueditor.all.js?_=v3.0"></script>
+    <script type="text/javascript" src="../ueditor/lang/zh-cn/zh-cn.js?_=v3.0"></script>
 
-    <script type="text/javascript" id="design" src="../dist/js/sde.design.js?_=99"></script>
+    <script type="text/javascript" id="design" src="../dist/js/sde.design.js?_=v3.0"></script>
   </head>
 
   <body>
