修复dialogs/textarea.html中TYPE=text的错误

--- a/dialogs/textarea.html
+++ b/dialogs/textarea.html
@@ -136,7 +136,7 @@
 
           var json = {
             ID: $G('txtID').value,
-            TYPE: 'text',
+            TYPE: 'textarea',
             NAME: $G('txtNAME').value,
             TAG: $G('txtTAG').value,
             DESCNAME: $G('txtDESCNAME').value,
